fixed scrollbar overwriting window borders on wayland

--- a/src/Mint-Y/gtk-3.0/gtk-dark.css
+++ b/src/Mint-Y/gtk-3.0/gtk-dark.css
@@ -1751,6 +1751,7 @@ notebook {
       padding: 2px; }
 
 scrollbar {
+  border: 1px solid transparent;
   background-color: #2c2c30;
   transition: 300ms cubic-bezier(0.25, 0.46, 0.45, 0.94); }
   * {
@@ -2516,6 +2517,12 @@ filechooser actionbar {
 filechooserbutton:drop(active) {
   box-shadow: none;
   border-color: transparent; }
+
+printdialog paper {
+  background-color: white;
+  color: rgba(255, 255, 255, 0.87);
+  border: 1px solid #202023;
+  padding: 0; }
 
 .sidebar {
   border-style: none;
