--- a/src/Mint-Y/gtk-3.0/gtk.css
+++ b/src/Mint-Y/gtk-3.0/gtk.css
@@ -1756,6 +1756,7 @@ notebook {
       padding: 2px; }
 
 scrollbar {
+  border: 1px solid transparent;
   background-color: #fcfcfc;
   transition: 300ms cubic-bezier(0.25, 0.46, 0.45, 0.94); }
   * {
@@ -2521,6 +2522,12 @@ filechooser actionbar {
 filechooserbutton:drop(active) {
   box-shadow: none;
   border-color: transparent; }
+
+printdialog paper {
+  background-color: white;
+  color: rgba(0, 0, 0, 0.87);
+  border: 1px solid #c8c8ce;
+  padding: 0; }
 
 .sidebar {
   border-style: none;
